# rpi_color_detector

./: CMakeLists.txt  README  build.sh  camera_loop_main.cpp  color_detect.cpp  config.txt  format.sh  http_server_main.cpp  read_cpp_model.cpp  run.sh  servo_example.cpp  stepper_example.cpp  tensorflow-lite.deb  tflite_model_test.cpp  time_model.sh
camera_loop/: CMakeLists.txt  camera_loop.cpp  camera_loop.h
classifier/: Untitled.ipynb  benchmark_training.py  classifier-server.py  image_provider.py  merge_models.ipynb  position_estimator_training.ipynb  tflite_training.ipynb
classifier/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
classifier/html/: index.html  js.js  multiclass_label.html  predictions.html  style.css
classifier/notebooks/: benchmark_gpu.ipynb  merge_models.ipynb  position_estimator_training.ipynb  scratchpad.ipynb  tflite_training.ipynb
cpp_classifier/: CMakeLists.txt  cpp_classifier.cpp  cpp_classifier.h
http_server/: CMakeLists.txt  http_server.cpp  http_server.h  index.html
image_task/: CMakeLists.txt  image_task.cpp  image_task.h
stepper_thread/: CMakeLists.txt  stepper_thread.cpp  stepper_thread.h
